--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,13 +2,13 @@
     "version":2,
     "builds":[
         {
-            "sre": "index.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes":[
         {
-            "sre": "/(.*)",
+            "src": "/(.*)",
             "dest": "index.js"
         }
     ]
